# Stockfish

src/: CMakeLists.txt  misc.cpp  misc.h
src/eval/nnue/: nnue_common.h
src/eval/nnue/layers/: clipped_relu.h  input_slice.h  sum.h
